--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "au-ej-2-plugin",
   "description": "An Aurelia plugin project.",
-  "version": "17.4.46",
+  "version": "17.4.46.1",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/glyad/aurelia-ej2-plugin.git"
@@ -73,6 +73,16 @@
     "src"
   ],
   "dependencies": {
-    "@syncfusion/ej2": "^17.4.46"
+    "@syncfusion/ej2-base": "^17.4.46",
+    "@syncfusion/ej2-buttons": "^17.4.46",
+    "@syncfusion/ej2-data": "^17.4.46",
+    "@syncfusion/ej2-dropdowns": "^17.4.46",
+    "@syncfusion/ej2-icons": "^17.4.46",
+    "@syncfusion/ej2-inputs": "^17.4.46",
+    "@syncfusion/ej2-lists": "^17.4.46",
+    "@syncfusion/ej2-navigations": "^17.4.46",
+    "@syncfusion/ej2-popups": "^17.4.46",
+    "@syncfusion/ej2-splitbuttons": "^17.4.46",
+    "@syncfusion/ej2-treemap": "^17.4.46"
   }
 }
