--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "au-ej2-plugin",
   "description": "An Aurelia plugin wrapping Syncfusion EJ2 components.",
-  "version": "17.4.46",
+  "version": "17.4.47",
   "author": {
     "name": "David Kossoglyad",
     "email": "david@logoui.co.il"
@@ -18,7 +18,10 @@
   "keywords": [
     "aurelia",
     "syncfusion",
-    "ej2", "ejs", "ej 2", "ej-2", 
+    "ej2",
+    "ejs",
+    "ej 2",
+    "ej-2",
     "logofx"
   ],
   "devDependencies": {
@@ -31,7 +34,11 @@
     "aurelia-tools": "^2.0.0",
     "autoprefixer": "^9.7.4",
     "browser-sync": "^2.26.7",
+    "commitizen": "^4.0.3",
     "connect-history-api-fallback": "^1.6.0",
+    "conventional-changelog": "^3.1.18",
+    "conventional-changelog-cli": "^2.0.31",
+    "cz-conventional-changelog": "^3.1.0",
     "debounce": "^1.2.0",
     "del": "^3.0.0",
     "gulp": "^4.0.2",
@@ -44,6 +51,7 @@
     "gulp-tslint": "^8.1.4",
     "gulp-typescript": "^5.0.0",
     "gulp-watch": "^5.0.1",
+    "husky": "^4.2.1",
     "jasmine-core": "^3.5.0",
     "karma": "^4.1.0",
     "karma-chrome-launcher": "^2.2.0",
@@ -51,6 +59,8 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-typescript-preprocessor": "^0.4.0",
     "minimatch": "^3.0.4",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^1.19.1",
     "promise-polyfill": "^8.1.3",
     "requirejs": "^2.3.6",
     "standard-changelog": "^2.0.21",
@@ -58,6 +68,7 @@
     "text": "requirejs/text#latest",
     "through2": "^3.0.1",
     "tslint": "^6.0.0",
+    "typedoc": "^0.16.9",
     "typescript": "^3.7.5",
     "vinyl-fs": "^3.0.3"
   },
@@ -74,7 +85,23 @@
     "test": "au test",
     "version": "standard-changelog && git add CHANGELOG.md",
     "postversion": "git push && git push --tags && npm publish",
-    "release": "standard-version"
+    "release": "standard-version",
+    "release:patch": "npm run release -- --release-as patch",
+    "release:minor": "npm run release -- --release-as minor",
+    "release:major": "npm run release -- --release-as major",
+    "lint": "tslint -c tslint.json 'src/**/*.ts' 'tests/**/*.spec.ts'",
+    "prettier": "prettier --config .prettierrc.json --write src/**/*.ts",
+    "doc": "typedoc --out docs/src/ --readme ./README.md",
+    "commit": "git-cz",
+    "precommit": "npm run prettier",
+    "prepush": "npm-run-all lint test",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
+    "publish": "npm run build && npm publish ./dist"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   },
   "engines": {
     "node": ">=8.9.0"
