--- a/.editorconfig
+++ b/.editorconfig
@@ -10,3 +10,10 @@ insert_final_newline = true
 # 2 space indentation
 indent_style = space
 indent_size = 2
+
+charset = utf-8
+trim_trailing_whitespace = true
+max_line_length = 100
+
+[*.md]
+trim_trailing_whitespace = false
